--- a/configure.ac
+++ b/configure.ac
@@ -82,9 +82,9 @@ AC_DEFUN(FIND_QT_INCLUDES,[
 
 ########################################################################
 
-AC_INIT([Kadu],[0.3.3-pre5])
+AC_INIT([Kadu],[0.3.3-rc1])
 AC_COPYRIGHT([configure.ac written by A.Smarzewski])
-AC_REVISION([0.3.3-pre5])
+AC_REVISION([0.3.3-rc1])
 AC_PREREQ(2.53)
 
 echo
@@ -97,7 +97,7 @@ AC_CONFIG_SRCDIR([kadu/kadu.cpp])
 AC_CONFIG_AUX_DIR([admin])
 AM_CONFIG_HEADER([config.h])
 AC_CANONICAL_SYSTEM
-AM_INIT_AUTOMAKE([kadu-0.3.3-pre5],[0.3.3-pre5])
+AM_INIT_AUTOMAKE([kadu-0.3.3-rc1],[0.3.3-rc1])
 
 
 ########################################################################
