--- a/Makefile.in
+++ b/Makefile.in
@@ -187,6 +187,8 @@ PACKAGE = @PACKAGE@
 PAMLIBS = @PAMLIBS@
 PASSWDLIBS = @PASSWDLIBS@
 POSUB = @POSUB@
+PTHREAD_FLAGS = @PTHREAD_FLAGS@
+PTHREAD_LIBS = @PTHREAD_LIBS@
 PYTHONINC = @PYTHONINC@
 PYTHONLIB = @PYTHONLIB@
 PYTHONMODDIR = @PYTHONMODDIR@
