--- a/libgadu/Makefile.in
+++ b/libgadu/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.19 2003/02/21 00:40:08 adrian Exp $
+# $Id: Makefile.in,v 1.20 2003/03/22 08:56:12 chilek Exp $
 
 prefix = @prefix@
 datadir = @datadir@
@@ -14,7 +14,7 @@ INSTALL = @INSTALL@
 
 #
 
-all:	libgadu @ekg@ @make_ekgwap@
+all:	configure libgadu @ekg@ @make_ekgwap@
 
 libgadu:
 	cd lib && $(MAKE) all
