--- a/libgadu/configure.in
+++ b/libgadu/configure.in
@@ -1,37 +1,12 @@
-dnl $Id: configure.in,v 1.18 2003/02/20 13:59:23 chilek Exp $
+dnl $Id: configure.in,v 1.19 2003/03/22 08:56:12 chilek Exp $
 
 AC_INIT(lib/libgadu.h)
 AC_PREREQ(2.50)
 AC_CONFIG_HEADERS(config.h)
 
-AC_PROG_CC
-AC_PROG_CPP
-AC_PROG_INSTALL
-AC_PROG_RANLIB
-AC_PROG_LN_S
-
-AC_PATH_PROG(GMAKE, gmake, no)
-if test "x$GMAKE" = "xno"; then
-  AC_PATH_PROG(MAKE, make, no)
-  if test "x$MAKE" = "xno"; then
-    AC_MSG_ERROR([make ])
-  fi
-else
-  MAKE="$GMAKE"
-fi
-
-AC_PATH_PROG(AR, ar, no)
-if test "x$AR" = "xno"; then
-  AC_MSG_ERROR([ar ])
-fi
-
-AC_PATH_PROG(STRIP, strip, :)
-
-AC_NEED_STDINT_H
-AC_C_BIGENDIAN
-
 AC_SUBST(CFLAGS_LIBGADU)
 AC_SUBST(LIBS_LIBGADU)
+AC_SUBST(OBJS)
 
 AC_SUBST(strip_ekg, "")
 AC_SUBST(strip_ioctld, "")
@@ -59,105 +34,157 @@ AC_SUBST(dep_ekg, "")
 AC_SUBST(make_ekgwap, "")
 AC_SUBST(install_ekgwap, "")
 
-AC_SUBST(OBJS, "")
+dnl
+dnl  Zaczynamy testy...
+dnl
+
+AC_PROG_CC
+AC_PROG_CPP
+AC_PROG_INSTALL
+AC_PROG_RANLIB
+AC_PROG_LN_S
+AC_C_CONST
+
+AC_PATH_PROG(GMAKE, gmake, no)
+
+if test "x$GMAKE" = "xno"; then
+	AC_PATH_PROG(MAKE, make, no)
+
+	if test "x$MAKE" = "xno"; then
+		AC_MSG_ERROR([make ])
+	fi
+else
+	MAKE="$GMAKE"
+fi
+
+AC_PATH_PROG(AR, ar, no)
+
+if test "x$AR" = "xno"; then
+	AC_MSG_ERROR([ar ])
+fi
+
+AC_PATH_PROG(STRIP, strip, :)
+
+dnl
+dnl  Tworzymy osobny plik lib/libgadu-config.h niezale¿ny od autoconfa
+dnl  z w³asn± przestrzeni± nazw (__GG_LIBGADU), ¿eby móc go spokojnie
+dnl  w³±czyæ w <libgadu.h>
+dnl
+
+AC_DEFUN([AC_LIBGADU_DEFINE],
+[
+	sed 's/#undef __GG_LIBGADU_$1/#define __GG_LIBGADU_$1/' < lib/libgadu-config.h > lib/libgadu-config.h-
+	mv -f lib/libgadu-config.h- lib/libgadu-config.h
+])
+
+AC_DEFUN([AC_LIBGADU_UNDEF],
+[
+	sed 's/#undef __GG_LIBGADU_$1.*/\/* & *\//' < lib/libgadu-config.h > lib/libgadu-config.h-
+	mv -f lib/libgadu-config.h- lib/libgadu-config.h
+])
 
 echo "/* Generated automatically by configure. Do not edit. */" > lib/libgadu-config.h
 cat lib/libgadu-config.h.in >> lib/libgadu-config.h
 
-AC_TRY_RUN([
-  int main() {
-  #ifdef WORDS_BIGENDIAN
-    return 0;
-  #else
-    return 1;
-  #endif
-  }
-], [
-  sed 's/#undef __GG_LIBGADU_BIGENDIAN/#define __GG_LIBGADU_BIGENDIAN/' < lib/libgadu-config.h > lib/libgadu-config.h-
-  mv -f lib/libgadu-config.h- lib/libgadu-config.h
-], [
-  sed 's/#undef __GG_LIBGADU_BIGENDIAN.*/\/* & *\//' < lib/libgadu-config.h > lib/libgadu-config.h-
-  mv -f lib/libgadu-config.h- lib/libgadu-config.h
-])
+dnl
+dnl  Najpierw sprawdzamy te opcje, które s± wspólne dla libgadu i ekg.
+dnl
+
+AC_C_BIGENDIAN
+
+AC_TRY_RUN(
+[#include "confdefs.h"
+
+int main()
+{
+#ifdef WORDS_BIGENDIAN
+	return 0;
+#else
+	return 1;
+#endif
+}], [AC_LIBGADU_DEFINE([BIGENDIAN])])
+	
+
+AC_NEED_STDINT_H
 
 if test "x$STDINT_H" = "x"; then
-  cp stdint.h lib/libgadu-stdint.h
-  STDINT_H=libgadu-stdint.h 
+	cp stdint.h lib/libgadu-stdint.h
+	STDINT_H=libgadu-stdint.h 
 fi
 
 sed "s/#include <stdint.h>/#include <$STDINT_H>/" < lib/libgadu-config.h > lib/libgadu-config.h-
 mv -f lib/libgadu-config.h- lib/libgadu-config.h
 
-# najpierw sprawdzamy te opcje, które s± wspólne dla libgadu i ekg.
-
-AC_ARG_ENABLE(debug, 
-  [  --disable-debug         Compile without debugging symbols and messages])
-
-if test "x$enable_debug" = "xno"; then 
-  CFLAGS=`echo "$CFLAGS" | sed 's/-g//'`
-  CFLAGS="$CFLAGS -DGG_DEBUG_DISABLE"
-  strip_ekg="strip-ekg"
-  strip_ioctld="strip-ioctld"
-  strip_libgadu_so="strip-libgadu-so"
-else
-  CFLAGS="$CFLAGS -g" 
-fi
-
-dnl sparc libs...
+dnl SunOS
 AC_CHECK_LIB(nsl, t_accept, LIBS="$LIBS -lnsl")
 AC_CHECK_LIB(socket, socket, LIBS="$LIBS -lsocket")
+
+dnl BeOS
 AC_CHECK_LIB(bind, __inet_addr, LIBS="$LIBS -lbind")
 
-AC_CHECK_FUNCS([gethostbyname_r])
+dnl threadsafe
+AC_CHECK_FUNCS([gethostbyname_r], [AC_LIBGADU_DEFINE([HAVE_GETHOSTBYNAME_R])])
 
 AC_MSG_CHECKING([for va_copy])
 AC_TRY_LINK([#include <stdarg.h>], [va_list a, b; va_copy(a, b);], 
 [
-  AC_MSG_RESULT([yes])
-  sed 's/#undef __GG_LIBGADU_HAVE_VA_COPY/#define __GG_LIBGADU_HAVE_VA_COPY/' < lib/libgadu-config.h > lib/libgadu-config.h-
-  mv -f lib/libgadu-config.h- lib/libgadu-config.h
+	AC_MSG_RESULT([yes])
+	AC_LIBGADU_DEFINE([HAVE_VA_COPY])
 ], [
-  AC_MSG_RESULT([no])
-  sed 's/#undef __GG_LIBGADU_HAVE_VA_COPY.*/\/* & *\//' < lib/libgadu-config.h > lib/libgadu-config.h-
-  mv -f lib/libgadu-config.h- lib/libgadu-config.h
+	AC_MSG_RESULT([no])
 ])
 
 AC_MSG_CHECKING([for __va_copy])
 AC_TRY_LINK([#include <stdarg.h>], [va_list a, b; __va_copy(a, b);], 
 [
-  AC_MSG_RESULT([yes])
-  sed 's/#undef __GG_LIBGADU_HAVE___VA_COPY/#define __GG_LIBGADU_HAVE___VA_COPY/' < lib/libgadu-config.h > lib/libgadu-config.h-
-  mv -f lib/libgadu-config.h- lib/libgadu-config.h
+	AC_MSG_RESULT([yes])
+	AC_LIBGADU_DEFINE([HAVE___VA_COPY])
 ], [
-  AC_MSG_RESULT([no])
-  sed 's/#undef __GG_LIBGADU_HAVE___VA_COPY.*/\/* & *\//' < lib/libgadu-config.h > lib/libgadu-config.h-
-  mv -f lib/libgadu-config.h- lib/libgadu-config.h
+	AC_MSG_RESULT([no])
 ])
 
-# jak± wersjê libgadu kompilujemy?
+dnl
+dnl  Je¶li u¿ytkownik nie chce debugowaæ, nikt mu nie ka¿e.
+dnl
+
+AC_ARG_ENABLE(debug, 
+	[  --disable-debug         Compile without debugging support])
+
+if test "x$enable_debug" = "xno"; then 
+	CFLAGS="$CFLAGS -DGG_DEBUG_DISABLE"
+	strip_ekg="strip-ekg"
+	strip_ioctld="strip-ioctld"
+	strip_libgadu_so="strip-libgadu-so"
+else
+	CFLAGS="$CFLAGS -g" 
+fi
+
+dnl 
+dnl  Jak± wersjê libgadu kompilujemy?
+dnl
 
 AC_ARG_ENABLE(shared,
-  [  --enable-shared         Compile shared version of libgadu])
+	[  --enable-shared         Compile shared version of libgadu])
 
 lib_shared_enabled=no
   
 if test "x$enable_shared" = "xyes"; then
-  shared="shared"
-  install_shared="install-shared"
-  lib_shared_enabled=yes
+	shared="shared"
+	install_shared="install-shared"
+	lib_shared_enabled=yes
 fi
 
 AC_ARG_ENABLE(static,
-  [  --disable-static        Don't compile static version of libgadu
+	[  --disable-static        Don't compile static version of libgadu
 
 Optional ekg Features:])
 
 lib_static_enabled=yes
 
 if test "x$enable_static" = "xno"; then
-  static=""
-  install_static=""
-  lib_static_enabled=no
+	static=""
+	install_static=""
+	lib_static_enabled=no
 fi
 
 if test "x$enable_static" = "xno" -a "x$enable_shared" != "xyes"; then
@@ -167,71 +194,69 @@ fi
 AC_ARG_ENABLE(dynamic,
   [  --enable-dynamic        Link ekg dynamically with libgadu])
 
+dnl
+dnl  Sprawd¼my, jak± wersjê vsnprintf() dostajemy.
+dnl
+
 AC_MSG_CHECKING([for C99-compatible vsnprintf()])
 AC_TRY_RUN(
- [#include <stdio.h>
- 
-  int main()
-  {
-    char tmp;
-    return (snprintf(&tmp, sizeof(tmp), "test") != 4);
-  }], [
-	AC_DEFINE(HAVE_C99_VSNPRINTF, 1, [define if you have C99-aware vsnprintf])
+[
+	#include <stdio.h>
+	int main()
+	{
+		char tmp;
+		return (snprintf(&tmp, sizeof(tmp), "test") != 4);
+	}
+], [
 	AC_MSG_RESULT([yes])
-      	sed 's/#undef __GG_LIBGADU_HAVE_C99_VSNPRINTF/#define __GG_LIBGADU_HAVE_C99_VSNPRINTF/' < lib/libgadu-config.h > lib/libgadu-config.h-
-        mv -f lib/libgadu-config.h- lib/libgadu-config.h
-  ], [
+	AC_LIBGADU_DEFINE([HAVE_C99_VSNPRINTF])
+], [
 	AC_MSG_RESULT([no])
-        sed 's/#undef __GG_LIBGADU_HAVE_C99_VSNPRINTF/\/* & *\//' < lib/libgadu-config.h > lib/libgadu-config.h-
-        mv -f lib/libgadu-config.h- lib/libgadu-config.h
-  ])
+])
+
+dnl
+dnl  Resolver libgadu oparty na pthread
+dnl
 
 AC_ARG_WITH(pthread,
   [  --with-pthread          Use pthread in resolver])
 
 if test "x$with_pthread" = "xyes"; then
-  ACX_PTHREAD([
-    LIBS="$PTHREAD_LIBS $LIBS"
-    CFLAGS="$CFLAGS $PTHREAD_CFLAGS"
-    CC="$PTHREAD_CC"
-    have_pthread=yes
+	ACX_PTHREAD(
+	[
+		LIBS="$PTHREAD_LIBS $LIBS"
+		CFLAGS="$CFLAGS $PTHREAD_CFLAGS"
+		CC="$PTHREAD_CC"
+		have_pthread=yes
 
-    sed 's/#undef __GG_LIBGADU_HAVE_PTHREAD/#define __GG_LIBGADU_HAVE_PTHREAD/' < lib/libgadu-config.h > lib/libgadu-config.h-
-    mv -f lib/libgadu-config.h- lib/libgadu-config.h
-    libgadu_have_pthread=yes
-  ], [
-    AC_MSG_ERROR([Your system is not supporting pthreads])
-  ])
+		AC_LIBGADU_DEFINE([HAVE_PTHREAD])
+	], [
+		AC_MSG_ERROR([Your system is not supporting pthreads])
+	])
 fi
 
-if test "x$libgadu_have_pthread" != "xyes"; then
-  sed 's/#undef __GG_LIBGADU_HAVE_PTHREAD/\/* & *\//' < lib/libgadu-config.h > lib/libgadu-config.h-
-  mv -f lib/libgadu-config.h- lib/libgadu-config.h
-fi
-
-# sprawdzamy, czy jest ,,long long'' na potrzeby obliczeñ czasów dcc
+dnl
+dnl  Sprawdzamy, czy jest ,,long long'' na potrzeby obliczeñ czasów DCC
+dnl
 
 AC_MSG_CHECKING([for long long])
 
-AC_TRY_RUN([
-  int main() {
-    long long a = 1LL;
-    unsigned long long b = 1LL;
-    return 0;
-  }
+AC_TRY_RUN(
+[
+	int main()
+	{
+		long long a = 1LL;
+		unsigned long long b = 1LL;
+		return 0;
+	}
 ], [
-  AC_MSG_RESULT([yes])
-  sed 's/#undef __GG_LIBGADU_HAVE_LONG_LONG/#define __GG_LIBGADU_HAVE_LONG_LONG/' < lib/libgadu-config.h > lib/libgadu-config.h-
-  mv -f lib/libgadu-config.h- lib/libgadu-config.h
-], [
-  AC_MSG_RESULT([no])
-  sed 's/#undef __GG_LIBGADU_HAVE_LONG_LONG.*/\/* & *\//' < lib/libgadu-config.h > lib/libgadu-config.h-
-  mv -f lib/libgadu-config.h- lib/libgadu-config.h
+	AC_MSG_RESULT([yes])
+	AC_LIBGADU_DEFINE([HAVE_LONG_LONG])
 ])
 
-AC_CHECK_TYPE(long long, )
-
-# zachowujemy opcje dla libgadu
+dnl
+dnl  Zachowujemy opcje dla libgadu
+dnl
 
 CFLAGS_LIBGADU="$CFLAGS_LIBGADU $CFLAGS"
 LIBS_LIBGADU="$LIBS_LIBGADU $LIBS"
@@ -245,22 +270,22 @@ echo
 echo "configured options:"
 
 if test "x$lib_static_enabled" = "xyes"; then
-  if test "x$lib_static_default" = "xyes"; then
-    echo " - static libgadu: enabled (default)"
-  else
-    echo " - static libgadu: enabled"
-  fi
+	if test "x$lib_static_default" = "xyes"; then
+		echo " - static libgadu: enabled (default)"
+	else
+		echo " - static libgadu: enabled"
+	fi
 else
-  echo " - static libgadu: disabled"
+	echo " - static libgadu: disabled"
 fi
 
 if test "x$lib_shared_enabled" = "xyes"; then
-  if test "x$lib_shared_default" = "xyes"; then
-    echo " - shared libgadu: enabled (default)"
-  else
-    echo " - shared libgadu: enabled"
-  fi
+	if test "x$lib_shared_default" = "xyes"; then
+		echo " - shared libgadu: enabled (default)"
+	else
+		echo " - shared libgadu: enabled"
+	fi
 else
-  echo " - shared libgadu: disabled"
+	echo " - shared libgadu: disabled"
 fi
 
