--- a/kadu/Makefile.am
+++ b/kadu/Makefile.am
@@ -21,7 +21,7 @@ message.cpp message.h message_moc.cpp \
 message_box.cpp message_box.h message_box_moc.cpp \
 misc.cpp misc.h misc_moc.cpp\
 password.cpp password.h password_moc.cpp \
-pending_msgs.cpp pending_msgs.h \
+pending_msgs.cpp pending_msgs.h pending_msgs_moc.cpp \
 personal_info.cpp personal_info.h personal_info_moc.cpp \
 pixmaps.h \
 register.cpp register.h register_moc.cpp \
