--- a/libgadu/config.h.in
+++ b/libgadu/config.h.in
@@ -3,6 +3,9 @@
 /* Define to 1 if you have the `gethostbyname_r' function. */
 #undef HAVE_GETHOSTBYNAME_R
 
+/* define if you have OpenSSL */
+#undef HAVE_OPENSSL
+
 /* Define if you have POSIX threads libraries and header files. */
 #undef HAVE_PTHREAD
 
