--- a/debian/rules
+++ b/debian/rules
@@ -24,9 +24,7 @@ config.status: configure
 	--build=$(DEB_BUILD_GNU_TYPE) \
 	--prefix=/usr \
 	--mandir=\$${prefix}/share/man \
-	--infodir=\$${prefix}/share/info \
-	--enable-voice \
-	--enable-modules
+	--infodir=\$${prefix}/share/info
 
 build: build-stamp
 build-stamp:  config.status
